# agent-project

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/agents/: analyst.py  coach.py  evaluator.py  interviewer.py  planner.py  quiz_master.py
app/api/: interview.py  knowledge.py  quiz.py  resume.py
app/crews/: interview_turn_crew.py  preparation_crew.py  quiz_crew.py  report_crew.py
app/tools/: rag_search.py  web_search.py
app/utils/: crew_utils.py
docs/: index.html
